SONAR-21290 Use UUIDs v4 for all database identifiers